# AMDAPPSDK-3.0-130-106

./: README.md
samples/: CMakeLists.txt
samples/bolt/: CMakeLists.txt
samples/bolt/BlackScholesBolt/: BlackScholes.cpp  BlackScholes.hpp  CMakeLists.txt
samples/bolt/BoltIntro/: BoltIntro.cpp  CMakeLists.txt
samples/bolt/BoltSort/: BoltSort.cpp  BoltSort.hpp  CMakeLists.txt
samples/bolt/BoxFilterSAT/: BoxFilterSAT.cpp  BoxFilterSAT.hpp  BoxFilterSAT_Kernels.cl  CMakeLists.txt
samples/bolt/MonteCarloPI/: CMakeLists.txt  MonteCarloPI.cpp  MonteCarloPI.hpp  gui.cpp  gui.hpp
samples/bolt/PerlinNoise/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp
samples/bolt/RgbToYuv/: CMakeLists.txt  RgbToYuv.cpp  RgbToYuv.hpp
samples/bolt/StocksDataAnalysis/: CMakeLists.txt  StocksDataAnalysis.cpp  StocksDataAnalysis.hpp
samples/opencl/: CMakeLists.txt
samples/opencl/benchmark/: CMakeLists.txt
samples/opencl/benchmark/BufferBandwidth/: BufferBandwidth.cpp  BufferBandwidth.hpp  CMakeLists.txt  Host.cpp  Log.cpp  Log.h  Shared.cpp
samples/opencl/benchmark/ConstantBandwidth/: CMakeLists.txt  ConstantBandwidth.cpp  ConstantBandwidth.hpp
samples/opencl/benchmark/GlobalMemoryBandwidth/: CMakeLists.txt  GlobalMemoryBandwidth.cpp  GlobalMemoryBandwidth.hpp  GlobalMemoryBandwidth_Kernels.cl
samples/opencl/benchmark/LDSBandwidth/: CMakeLists.txt  LDSBandwidth.cpp  LDSBandwidth.hpp  LDSBandwidth_Kernels.cl
samples/opencl/benchmark/MemoryOptimizations/: CMakeLists.txt  MemoryOptimizations.cpp  MemoryOptimizations.hpp  MemoryOptimizations_Kernels.cl
samples/opencl/cpp_cl/: CMakeLists.txt
samples/opencl/cpp_cl/1.x/: CMakeLists.txt
samples/opencl/cpp_cl/1.x/AsyncDataTransfer/: AsyncDataTransfer.cpp  AsyncDataTransfer.hpp  CMakeLists.txt
samples/opencl/cpp_cl/1.x/ConcurrentKernel/: CMakeLists.txt  ConcurrentKernel.cpp  ConcurrentKernel.hpp  ConcurrentKernel_Kernels.cl
samples/opencl/cpp_cl/1.x/CplusplusWrapper/: CMakeLists.txt  CplusplusWrapper.cpp
samples/opencl/cpp_cl/1.x/DwtHaar1DCPPKernel/: CMakeLists.txt  DwtHaar1DCPPKernel.cpp  DwtHaar1DCPPKernel.hpp
samples/opencl/cpp_cl/1.x/EigenValue/: CMakeLists.txt  EigenValue.cpp  EigenValue.hpp
samples/opencl/cpp_cl/1.x/FFT/: CMakeLists.txt  FFT.cpp  FFT.hpp
samples/opencl/cpp_cl/1.x/GaussianNoise/: CMakeLists.txt  GaussianNoise.cpp  GaussianNoise.hpp
samples/opencl/cpp_cl/1.x/HDRToneMapping/: CMakeLists.txt  HDRToneMapping.cpp  HDRToneMapping.hpp  HDRToneMapping_Kernels.cl
samples/opencl/cpp_cl/1.x/IntroStaticCPPKernel/: CMakeLists.txt  IntroStaticCPPKernel.cpp  IntroStaticCPPKernel.hpp  IntroStaticCPPKernel_Kernels.cl
samples/opencl/cpp_cl/1.x/MatrixMulDouble/: CMakeLists.txt  MatrixMulDouble.cpp  MatrixMulDouble.hpp  MatrixMulDouble_Kernels.cl
samples/opencl/cpp_cl/1.x/MatrixMultiplicationCPPKernel/: CMakeLists.txt  MatrixMultiplicationCPPKernel.cpp  MatrixMultiplicationCPPKernel.hpp
samples/opencl/cpp_cl/1.x/MersenneTwister/: CMakeLists.txt  MersenneTwister.cpp  MersenneTwister.hpp  MersenneTwister_Kernels.cl
samples/opencl/cpp_cl/1.x/SoAversusAoS/: CMakeLists.txt  SoAversusAoS.cpp  SoAversusAoS.hpp  SoAversusAoS_Kernels.cl
samples/opencl/cpp_cl/1.x/SobelFilterImage/: CMakeLists.txt  SobelFilterImage.cpp  SobelFilterImage.hpp
samples/opencl/cpp_cl/1.x/TransferOverlapCPP/: CMakeLists.txt  TransferOverlapCPP.cpp  TransferOverlapCPP.hpp
samples/opencl/cpp_cl/1.x/URNGNoiseGL/: CMakeLists.txt  URNGNoiseGL.cpp  URNGNoiseGL.hpp  URNGNoiseGL_Kernels.cl
samples/opencl/cpp_cl/1.x/UnsharpMask/: CMakeLists.txt  UnsharpMask.cpp  UnsharpMask.hpp  UnsharpMask_Kernels.cl
samples/opencv/: CMakeLists.txt
samples/opencv/CartoonFilter/: CMakeLists.txt  CartoonFilter.cpp  CartoonFilter.hpp
samples/opencv/GestureRecognition/: CMakeLists.txt
samples/opencv/OpenCV-CLIntro/: CMakeLists.txt  OpenCV-CLIntro.cpp
